syntax = "proto3";

package main;

// import "valiadte/validate.proto";
import "common.proto";
import "students.proto";

option go_package = "/proto/gen;grpc_pb";

service TeachersService {
    rpc GetTeachers (GetTeachersRequest) returns (TeachersResponse);
    rpc AddTeachers (Teachers) returns (Teachers);
    rpc UpdateTeachers (Teachers) returns (Teachers);
    rpc DeleteTeachers (TeacherIds) returns (DeleteTeachersConfirmation);
    rpc GetStudentsByClassTeacher (TeacherId) returns (Students);
    rpc GetStudentCountByClassTeacher (TeacherId) returns (StudentCount);
}

message StudentCount {
    bool status = 1;
    int32 student_count = 2;
}

message DeleteTeachersConfirmation {
    string status = 1;
    repeated string deleted_ids = 2;
}

message TeacherId {
    string id =  1;
}

message TeacherIds {
    repeated TeacherId ids = 1;
}

message GetTeachersRequest {
    Teacher teacher = 1;
    repeated SortField sort_by = 2;
    int32 page_number = 3;
    int32 page_size = 4;
}

message Teacher {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string class = 5;
    string subject = 6;
}

message Teachers {
    repeated Teacher teachers = 1;
}

message TeachersResponse {
    Teachers teachers = 1;
    int32 total = 2;
    int32 total_pages = 3;
    int32 page_number = 4;
    int32 page_size = 5;
}
